--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Django==2.1
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 drf-extensions==0.6.0
+gunicorn==20.0.4
 idna==2.10
 importlib-metadata==2.0.0
 itypes==1.2.0
@@ -42,4 +43,5 @@ uritemplate==3.0.1
 urllib3==1.25.10
 vine==5.0.0
 wcwidth==0.2.5
+whitenoise==5.2.0
 zipp==3.3.1
