Changin engines to package.json in root

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "heroku-prebuild": "NODE_ENV=production cd frontend/ && yarn install && yarn build && cd .."
   },
+  "engines":{
+      "node": "12.19.0",
+      "npm": "6.14.8"
+  },
   "cacheDirectories": [
     "frontend/node_modules"
   ]
