--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ Jinja2==2.11.2
 kombu==5.0.2
 lxml==4.5.2
 MarkupSafe==1.1.1
-MechanicalSoup==1.0.0.dev0
+MechanicalSoup==0.12.0
 mysql==0.0.2
 mysqlclient==1.4.2.post1
 openapi-codec==1.3.2
