--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,8 @@ MechanicalSoup==0.12.0
 mysql==0.0.2
 mysqlclient==1.4.2.post1
 openapi-codec==1.3.2
-pkg-resources==0.0.0
 prompt-toolkit==3.0.8
+PyLaTex==1.4.0
 PyMySQL==0.10.1
 pytz==2020.1
 redis==3.5.3
