--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 django-cors-headers==3.5.0
+django-storages==1.10.1
 amqp==5.0.1
 anyjson==0.3.3
 APScheduler==3.6.3
@@ -46,3 +47,4 @@ vine==5.0.0
 wcwidth==0.2.5
 whitenoise==3.3
 zipp==3.3.1
+boto3==1.16.3
