--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-phone-input-2": "^2.13.8",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
